--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <a href="https://twitter.com/traversymedia" target="_blank">Twitter</a>
         </div>
         <div class="content">
+          
           <h1>Twitter</h1>
           <p>Følg meg på Twitter</p>
         </div>
@@ -58,7 +59,7 @@
           <h1>Github</h1>
           <p>Sjekk ut min Github da vel!</p>
         </div>
-        <title>externalStyle.html</title>
+        <title>Hei hallo </title>
           <link rel = "stylesheet"
           type = "text/css"
           href = "style.css" 
