--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h1>Github</h1>
           <p>Sjekk ut min Github da vel!</p>
         </div>
-        <title>Hei hallo </title>
+        <title>Hei hAde </title>
           <link rel = "stylesheet"
           type = "text/css"
           href = "style.css" 
