--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-
 <html>
-<div class="container">
+<body>
+  <div class="container">
     <header>
       <h1>Følg meg på sosiale medier</h1>
     </header>
     <ul class="accordion">
       <li class="tab">
         <div class="social youtube">
-          <a href="https://youtube.com/traversymedia" target="_blank">Youtube</a>
+          <a href="https://youtube.com" target="_blank">Youtube</a>
         </div>
         <div class="content">
           <h1>YouTube</h1>
@@ -16,17 +16,16 @@
       </li>
       <li class="tab">
         <div class="social twitter">
-          <a href="https://twitter.com/traversymedia" target="_blank">Twitter</a>
+          <a href="https://twitter.com" target="_blank">Twitter</a>
         </div>
         <div class="content">
-          
           <h1>Twitter</h1>
           <p>Følg meg på Twitter</p>
         </div>
       </li>
       <li class="tab">
         <div class="social facebook">
-          <a href="https://facebook.com/traversymedia" target="_blank">Facebook</a>
+          <a href="https://facebook.com" target="_blank">Facebook</a>
         </div>
         <div class="content">
           <h1>Facebook</h1>
@@ -35,7 +34,7 @@
       </li>
       <li class="tab">
         <div class="social linkedin">
-          <a href="https://www.linkedin.com/in/bradtraversy" target="_blank">LinkedIn</a>
+          <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
         </div>
         <div class="content">
           <h1>LinkedIn</h1>
@@ -44,7 +43,7 @@
       </li>
       <li class="tab">
         <div class="social instagram">
-          <a href="http://instagram.com/traversymedia" target="_blank">Instagram</a>
+          <a href="http://instagram.com" target="_blank">Instagram</a>
         </div>
         <div class="content">
           <h1>Instagram</h1>
@@ -53,18 +52,16 @@
       </li>
       <li class="tab">
         <div class="social github">
-          <a href="http://github.com/bradtraversy" target="_blank">Github</a>
+          <a href="https://github.com/bjorngiske" target="_blank">Github</a>
         </div>
         <div class="content">
           <h1>Github</h1>
           <p>Sjekk ut min Github da vel!</p>
         </div>
-        <title>Hei hAde </title>
-          <link rel = "stylesheet"
-          type = "text/css"
-          href = "style.css" 
-          />
+        <title>Hei hallo </title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
       </li>
     </ul>
   </div>
+</body>
 </html>
