--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </li>
       <li class="tab">
         <div class="social instagram">
-          <a href="http://instagram.com" target="_blank">Instagram</a>
+          <a href="https://www.instagram.com/bjorngiske/?hl=nb" target="_blank">Instagram</a>
         </div>
         <div class="content">
           <h1>Instagram</h1>
